fix: fixed all the desktop layout issue

--- a/sass/about.scss
+++ b/sass/about.scss
@@ -33,13 +33,18 @@ $color-footer: #1B1B1B;
 
 
 /* Desktop and Laptop View */
-@media (min-width: 1025px) and (max-width: 1280px) {
+@media (min-width: 768px) {
 
     .home {
 
         .navigation {
             display: flex;
             position: relative;
+
+            .icon {
+                color: $color-secondary;
+                display: none;
+            }
 
             &__image {
                 max-width: 100%;
