--- a/sass/challenge.scss
+++ b/sass/challenge.scss
@@ -29,13 +29,18 @@ $color-footer: #1B1B1B;
 
 
 /* Desktop and Laptop View */
-@media (min-width: 1025px) and (max-width: 1280px) {
+@media (min-width: 768px) {
 
     .home {
         background-color: $color-secondary;
 
         .navigation {
             display: flex;
+
+            .icon {
+                color: $color-secondary;
+                display: none;
+            }
 
             &__logo {
                 max-width: 50%;
