--- a/sass/contact.scss
+++ b/sass/contact.scss
@@ -28,13 +28,18 @@ $color-tertiary: #CBF7F0;
 $color-footer: #1B1B1B;
 
 
-@media (min-width: 1025px) and (max-width: 1280px) {
+@media (min-width: 768px) {
 
     .home {
         background-color: $color-tertiary;
 
         .navigation {
             display: flex;
+
+            .icon {
+                color: $color-secondary;
+                display: none;
+            }
 
             &__logo {
                 max-width: 50%;
